--- a/portfolio.html
+++ b/portfolio.html
@@ -22,16 +22,13 @@
             <nav class="header__navigation">
                 <ul class="header__navigation-list list">
                     <li class="header__navigation-item">
-                        <a href="./index.html"
-                            class="header__navigation-link link">Студія</a>
+                        <a href="./index.html" class="header__navigation-link link">Студія</a>
                     </li>
                     <li class="header__navigation-item">
-                        <a href="./portfolio.html" 
-                            class="header__navigation-link header__navigation-link--active link">Портфоліо</a>
+                        <a href="./portfolio.html" class="header__navigation-link header__navigation-link--active link">Портфоліо</a>
                     </li>
                     <li class="header__navigation-item">
-                        <a href="" 
-                            class="header__navigation-link link">Контакти</a>
+                        <a href="" class="header__navigation-link link">Контакти</a>
                     </li>
                 </ul>
             </nav>
